--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,24 +1,24 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
-        <a class="navbar-brand" href="#">Dating App</a>
+        <a routerLink="/" class="navbar-brand" href="#">Dating App</a>
 
-        @if (accountService.currentUser()) {
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link">Matches</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link">Lists</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link">Messages</a>
-            </li>
+          @if (accountService.currentUser()) {
+          <li class="nav-item">
+              <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a>
+          </li>
+          <li class="nav-item">
+              <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
+          </li>
+          <li class="nav-item">
+              <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
+          </li>
+          }
         </ul>
-        }
 
         @if (accountService.currentUser()) {
         <div dropdown class="dropdown">
-            <a dropdownToggle class="dropdown-toggle text-decoration-none">Welcome user</a>
+            <a dropdownToggle class="dropdown-toggle text-decoration-none">Welcome {{ accountService.currentUser()?.username | titlecase }}</a>
             <a *dropdownMenu class="dropdown-menu">
                 <a class="dropdown-item">Edit profile</a>
                 <div class="dropdown-divider"></div>
